# design-patterns

./: .gitignore  build.gradle
c++-design-pattern/: .gitignore  CMakeLists.txt  README.md
c++-design-pattern/src/: CMakeLists.txt  main.cpp
c++-design-pattern/src/intro_to_design_patterns_using_java_lang/: DesignPatternMain.cpp  DesignPatternMain.h  IntroToDesignPatternsUsingJavaLang.cpp  IntroToDesignPatternsUsingJavaLang.h  README.md
c++-design-pattern/src/intro_to_design_patterns_using_java_lang/iterator/: Book.cpp  Book.h  BookShelf.cpp  BookShelf.h  BookShelfIterator.cpp  BookShelfIterator.h  IteratorMain.cpp  IteratorMain.h
c++-design-pattern/src/intro_to_design_patterns_using_java_lang/test/: AAA.cpp  AAA.h  BBB.cpp  BBB.h  Base.cpp  Base.h  TestMain.cpp  TestMain.h
c++-design-pattern/src/intro_to_design_patterns_using_java_lang/wrong/: WrongMain.cpp  WrongMain.h
c++-design-pattern/src/utils/: String.cpp  String.h
c++-design-pattern/test/: CMakeLists.txt
c++-design-pattern/vscode-configure-example/: launch.json
java-design-pattern/: .gitignore
typescript-design-pattern/: .eslintrc.js  .gitignore  package.json  tsconfig.json
typescript-design-pattern/src/: index.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/: index.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/adapter/banner/: adapter-banner-main.ts  banner.ts  print-banner.ts  print.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/adapter/file-properties/: adapter-file-properties.ts  file-io.ts  file-properties.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/factory-method/: factory-method-main.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/factory-method/credit-card/: credit-card-factory.ts  index.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/internal-iterator/: book-shelf.ts  internal-iterator-main.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/iterator/: book-shelf-iterator.ts  book-shelf.ts  iterable.ts  iterator-main.ts  iterator.ts
typescript-design-pattern/src/into-to-design-patterns-using-java-lang/template-method/: display.ts  number-display.ts  result-string.ts  string-display.ts  template-method-main.ts
typescript-design-pattern/src/stdin-stdout/: index.ts  input.ts  output.ts
typescript-design-pattern/src/utils/date-time/: dayjs-date-time.ts  index.ts
typescript-design-pattern/src/utils/dayjs-adapter/: index.ts
typescript-design-pattern/src/utils/stdin-stdout/: input.ts  output.ts
(+70 files in other folders)
